--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
         format_sql: true
         #MySQL	              org.hibernate.dialect.MySQLDialect
         #MySQL with InnoDB	  org.hibernate.dialect.MySQLInnoDBDialect
-        dialect: org.hibernate.dialect.MySQLInnoDBDialect
+        dialect: com.mycompany.pos.CustomDialect
   datasource:
-    url: <connection string>
+    url: jdbc:mysql://localhost:3306/mipos?autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8
     username: root
-    password: root
+    password: 123456789
     driver-class-name: com.mysql.jdbc.Driver
